# backWH

./: .env copy  .pdm-python  db.sqlite3  pyproject.toml
backWH/: admin.py  apps.py  models.py  serializers.py  views.py
backWH/migrations/: 0001_initial.py  0002_remove_people_descricao_people_capa_people_isbn_and_more.py  0003_rename_titulo_people_descricao_and_more.py  0004_alter_people_foto.py  0005_people_local.py  0006_people_age.py  0007_rename_age_people_idade_rename_name_people_nome.py  0008_alter_people_descricao.py  0009_alter_people_foto.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
