[project]
name = ""
version = ""
description = ""
authors = [
    {name = "BCD15", email = "bruno69correadias@gmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "python-magic>=0.4.27",
    "Pillow>=10.1.0",
    "drf-spectacular>=0.26.5",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
    "file:///${PROJECT_ROOT}/.",
]
requires-python = ">=3.10"
license = {text = "n"}

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
